--- a/main2.css
+++ b/main2.css
@@ -6,7 +6,7 @@
     
 }
 .container {
-    max-width: 800px;
+    max-width: 1500px;
     margin: 20px auto;
     background-color: #fff;
     border-radius: 5px;
@@ -35,6 +35,8 @@ h1 {
 .section-content {
     font-size: 22px;
     margin: 10px 0;
+    color: white;
+        font-family: Arial, Helvetica, sans-serif;
 }
 
 
