--- a/main.css
+++ b/main.css
@@ -9,5 +9,14 @@
     padding-left: 0;
     }
 
+main {
+    position: absolute;
+    padding-left: 830px;
+    padding-top: 550px;
+
+
+}
+
+iframe {}
 
     
