--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 .bg-info {
     padding: 140px;
+margin-bottom: 30px;
+    height: 500px;
     
 }
  ul {
@@ -17,6 +19,6 @@ main {
 
 }
 
-iframe {}
+
 
     
