--- a/main2.css
+++ b/main2.css
@@ -35,19 +35,19 @@ h1 {
 .section-content {
     font-size: 22px;
     margin: 10px 0;
-    color: white;
+    color: rgb(0, 0, 0);
         font-family: Arial, Helvetica, sans-serif;
 }
 
 
 
 h1 {
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
 }
 
 
 div {
-
-    background-image: url("paysage.png");
+    
+    background-image: url("cv.png");
 }
